--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,5 @@
 language: node_js
 node_js:
   - lts/*
-install:
-  - echo "install" && exit 0
-script:
-  - echo "script" && exit 0
+install: echo "install" && exit 0
+script: echo "script" && exit 0
