--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,6 @@ before_install:
   - export PATH=$HOME/.yarn/bin:$PATH
 cache:
   yarn: true
-install: true
+install:
+  - cd ./functions && yarn install && cd ..
 script: echo "script"
